--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -18,22 +18,22 @@ jobs:
     - name: Check out code into the Go module directory
       uses: actions/checkout@v1
 
-    - name: Get dependencies
-      run: |
-        go get -v -t -d ./...
-        if [ -f Gopkg.toml ]; then
-            curl https://raw.githubusercontent.com/golang/dep/master/install.sh | sh
-            dep ensure
-        fi
+#   - name: Get dependencies
+#     run: |
+#       go get -v -t -d ./...
+#       if [ -f Gopkg.toml ]; then
+#           curl https://raw.githubusercontent.com/golang/dep/master/install.sh | sh
+#           dep ensure
+#       fi
 
-    - name: Build
-      run: go build -v .
+#   - name: Build
+#     run: go build -v .
 
-    - uses: azure/docker-login@v1
-      with:
-          login-server: $DOCKER_REG
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+#   - uses: azure/docker-login@v1
+#     with:
+#         login-server: $DOCKER_REG
+#         username: ${{ github.actor }}
+#         password: ${{ secrets.GITHUB_TOKEN }}
 
     - name: Build Docker Image and Push
       run: |
@@ -43,7 +43,7 @@ jobs:
         CONTAINER_IMAGE=$DOCKER_REG/$REPO:${{ github.sha }}
         CONTAINER_IMAGE_ALIAS=$DOCKER_REG/$REPO:$REF
 
-        #echo '${{ secrets.github_docker_reg_password }}' | docker login --username=${{ secrets.github_docker_reg_username }} $DOCKER_REG --password-stdin
+        echo '${{ secrets.GITHUB_TOKEN }}' | docker login --username=${{ github.actor }} $DOCKER_REG --password-stdin
 
         docker build . -t $CONTAINER_IMAGE
         docker push $CONTAINER_IMAGE
