--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -38,10 +38,10 @@ jobs:
     - name: Build Docker Image and Push
       run: |
         REPO=`echo ${{github.repository}} | tr '[:upper:]' '[:lower:]'`
-        REF=`echo ${{github.ref}} | awk -F/ '{print $NF}'`
+        REF=`echo ${{github.ref}} | awk -F/ '{print $NF}'` | tr -cd '[:alnum:]._-'
 
-        CONTAINER_IMAGE=$DOCKER_REG/$REPO/$REPO:${{ github.sha }}
-        CONTAINER_IMAGE_ALIAS=$DOCKER_REG/$REPO/$REPO:$REF
+        CONTAINER_IMAGE=$DOCKER_REG/$REPO/img:${{ github.sha }}
+        CONTAINER_IMAGE_ALIAS=$DOCKER_REG/$REPO/img:$REF
 
         echo '${{ secrets.GITHUB_TOKEN }}' | docker login --username=${{ github.actor }} $DOCKER_REG --password-stdin
 
