--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -1,7 +1,8 @@
 name: Go
 on: [push]
 env:
-  DOCKER_REG: docker.pkg.github.com
+# DOCKER_REG: docker.pkg.github.com
+  DOCKER_REG: docker.io
 jobs:
 
   build:
@@ -18,32 +19,30 @@ jobs:
     - name: Check out code into the Go module directory
       uses: actions/checkout@v1
 
-#   - name: Get dependencies
+#   - name: Build Docker Image and Push @ Github-Registry
 #     run: |
-#       go get -v -t -d ./...
-#       if [ -f Gopkg.toml ]; then
-#           curl https://raw.githubusercontent.com/golang/dep/master/install.sh | sh
-#           dep ensure
-#       fi
+#       REPO=`echo ${{github.repository}} | tr '[:upper:]' '[:lower:]'`
+#       REF=`echo ${{github.ref}} | awk -F/ '{print $NF}'`
 
-#   - name: Build
-#     run: go build -v .
+#       CONTAINER_IMAGE=$DOCKER_REG/$REPO/img:${{ github.sha }}
+#       CONTAINER_IMAGE_ALIAS=$DOCKER_REG/$REPO/img:$REF
 
-#   - uses: azure/docker-login@v1
-#     with:
-#         login-server: $DOCKER_REG
-#         username: ${{ github.actor }}
-#         password: ${{ secrets.GITHUB_TOKEN }}
+#       echo '${{ secrets.GITHUB_TOKEN }}' | docker login --username=${{ github.actor }} $DOCKER_REG --password-stdin
 
-    - name: Build Docker Image and Push
+#       docker build . -t $CONTAINER_IMAGE
+#       docker push $CONTAINER_IMAGE
+#       docker tag $CONTAINER_IMAGE $CONTAINER_IMAGE_ALIAS
+#       docker push $CONTAINER_IMAGE_ALIAS
+
+    - name: Build Docker Image and Push @ Dockerhub
       run: |
-        REPO=`echo ${{github.repository}} | tr '[:upper:]' '[:lower:]'`
+        REPO="diveinto/nights-watch"
         REF=`echo ${{github.ref}} | awk -F/ '{print $NF}'`
 
-        CONTAINER_IMAGE=$DOCKER_REG/$REPO/img:${{ github.sha }}
-        CONTAINER_IMAGE_ALIAS=$DOCKER_REG/$REPO/img:$REF
+        CONTAINER_IMAGE=$DOCKER_REG/$REPO:${{ github.sha }}
+        CONTAINER_IMAGE_ALIAS=$DOCKER_REG/$REPO:$REF
 
-        echo '${{ secrets.GITHUB_TOKEN }}' | docker login --username=${{ github.actor }} $DOCKER_REG --password-stdin
+        echo '${{ secrets.DOCKERHUB_TOKEN }}' | docker login --username=${{ secrets.DOCKERHUB_USERNAME }} $DOCKER_REG --password-stdin
 
         docker build . -t $CONTAINER_IMAGE
         docker push $CONTAINER_IMAGE
